--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.10",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
